# abilian-core

./: .codeclimate.yml  .cruft.json  .dir-locals.el  .editorconfig  .eslintrc  .eslintrc.js  .gitignore  .jshintrc  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  CONTRIBUTING.md  CREDITS.txt  MANIFEST.in  Makefile  README.md  README.rst  TODO.md  TODO.txt  Vagrantfile  appveyor.yml  azure-pipelines.yml  circle.yml  conftest.py  deps-frozen.txt  deps.txt  dev-requirements.txt  messages.pot  mypy.ini  noxfile.py  package.json  pylint.rc  pylintrc  pyproject.toml  pyrightconfig.json  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini  (+1 more)
.buildkite/: pipeline.yml
.builds/: alpine.yml
.circleci/: config.yml
.github/workflows/: ci.yml  codeql.yml  front-checks.yml  python-checks.yml  python-tests.yml  pythonpackage.yml  tests.yml
abilian/: __init__.py  app.py  application.py  config.py  conftest.py  default_logging.yml  i18n.py
abilian/cli/: __init__.py  base.py  config.py  indexing.py
abilian/cli/templates/: config.py.jinja2  logging.yml.jinja2
abilian/core/: celery.py  entities.py  extensions.py  jinjaext.py  logging.py  redis.py  sentry.py  signals.py  singleton.py  sqlalchemy.py  subjects.py  util.py
abilian/core/commands/: __init__.py  assets.py  base.py  config.py  indexing.py  routes.py
abilian/core/extensions/: __init__.py  csrf.py  jinjaext.py  login.py  redis.py  upstream_info.py
abilian/core/models/: __init__.py  attachment.py  base.py  blob.py  comment.py  owned.py  subjects.py  tag.py
abilian/core/tests/: dummy.py  test_entities.py  test_permissions.py  test_sa_extensions.py  test_singleton.py  test_subject.py  test_utils.py
abilian/plugin/: __init__.py  loader.py
abilian/services/: __init__.py  activity.py  audit.py  base.py  conversion.py  image.py  indexing.py
abilian/services/activity/: __init__.py  models.py  service.py  tests.py
abilian/services/activitytracker/: __init__.py  models.py  service.py
abilian/services/antivirus/: __init__.py  service.py
abilian/services/audit/: __init__.py  models.py  service.py  tests.py
abilian/services/auth/: __init__.py  models.py  service.py  tests.py  views.py
abilian/services/comments/: __init__.py  models.py  service.py  tests.py
abilian/services/conversion/: __init__.py  cache.py  exceptions.py  handlers.py  service.py  tests.py  util.py
abilian/services/image/: __init__.py
abilian/services/indexing/: __init__.py  adapter.py  debug_toolbar.py  schema.py  service.py
abilian/services/preferences/: __init__.py  models.py  panel.py  service.py  tests.py
abilian/services/repository/: __init__.py  service.py  test_repository.py  test_session_repository.py  tests.py
abilian/services/sandbox/: 00README.txt  activity.py  comment.py  follow.py  like.py  messaging.py  preference.py  tag.py
abilian/services/security/: __init__.py  debug_toolbar.py  models.py  service.py  tests.py
abilian/services/settings/: __init__.py  models.py  service.py  tests.py
abilian/services/tagging/: __init__.py  models.py  service.py
abilian/services/tests/: test_image.py
abilian/services/viewtracker/: __init__.py  models.py  service.py
abilian/services/vocabularies/: __init__.py  admin.py  forms.py  models.py  service.py  tests.py
abilian/templates/widgets/: horizontal_table.html  render_ajax_table.html  render_for_edit.html  render_single.html
abilian/testing/: __init__.py  base.py  config.py  fixtures.py  test_i18n.py  test_id_generator.py  util.py  validation.py
abilian/tests/: test_i18n.py  test_id_generator.py
abilian/tests/integration/: test_frontend.py  test_search.py
abilian/translations/: messages.pot
abilian/web/: __init__.py  action.py  assets.py  blueprints.py  csrf.py  decorators.py  errors.py  filters.py  forms.py  frontend.py  hooks.py  http.py  jinja.py  nav.py  search.py  util.py  views.py  widgets.py
abilian/web/admin/: __init__.py  extension.py  panel.py  test_views.py  tests.py
abilian/web/assets/: __init__.py  filters.py  mixin.py
abilian/web/attachments/: __init__.py  extension.py  forms.py  views.py
abilian/web/comments/: __init__.py  extension.py  forms.py  views.py
abilian/web/coreviews/: __init__.py  users.py
abilian/web/forms/: __init__.py  fields.py  filters.py  form.py  permissions.py  tests.py  util.py  validators.py  widgets.py
abilian/web/preferences/: __init__.py  user.py
abilian/web/search/: __init__.py  criterion.py  views.py
abilian/web/setupwizard/: __init__.py
abilian/web/tags/: __init__.py  admin.py  criterion.py  extension.py  forms.py  views.py
abilian/web/templates/: abilian_base.html  base.html  (+9 more)
demo/: app.py  cli.py  config.py  wsgi.py
deploy/: provision.sh  vagrant_test.sh
doc/: conf.py  index.rst  installation.rst  make.bat
docs/: Makefile  api.rst  architecture.rst  coding-standard.rst  conf.py  contributing.rst  credits.rst  flaskstyle.sty  index.rst  installation.rst  installing.rst  introduction.rst  quickstart.rst
docs/exts/: intersphinx_flask_ext.py
docs/inventories/: babel.inv  flask.inv  flask_babel.inv  python27.inv  sqlalchemy_0_8.inv  sqlalchemy_0_9.inv  sqlalchemy_1_0.inv  webassets.inv
etc/: 00README.txt  babel.cfg  coverage.rc  deps-devel.txt  deps-frozen.txt  deps.txt  dev-requirements.txt  pylama.ini  pylintrc  requirements.txt  vagrant_test.sh
src/abilian/: app.py  config.py  i18n.py
tests/: __init__.py  test_i18n.py  test_id_generator.py
tests/integration/: __init__.py  application.py  base.py  config.py  fix_path.py  test_audit.py  test_conversion.py  test_frontend.py  test_search.py  test_services.py  util.py
tests/unit/: dummy.py  test_actions.py  test_entities.py  test_filters.py  test_subject.py  test_utils.py  test_widgets.py
tools/hooks/: pre-commit
yaka/: __init__.py  application.py
yaka/core/: entities.py  extensions.py  security.py  signals.py  subjects.py  util.py
yaka/services/: __init__.py  activity.py  audit.py  conversion.py  image.py  indexing.py
yaka/web/: __init__.py  decorators.py  filters.py  forms.py  frontend.py  search.py  util.py  widgets.py
(+457 files in other folders)
