[tool.poetry]
name = "abilian-core"
version = "0.10.40"
description = "A framework for enterprise applications (CRM, ERP, collaboration...), based on Flask and SQLAlchemy"
authors = ["Abilian SAS"]
license = "LGPL"
readme = "README.rst"
repository = "https://github.com/abilian/abilian-core"
packages = [{ include = "abilian" }]


[tool.poetry.dependencies]
python = "~2.7 || ^3.6"

# python 2/3 compat
six = "*"

# Flask and friends
Flask = "^1.0"
Flask-Assets = ">=0.12"
Flask-Babel = ">=0.11"
Flask-DebugToolbar = ">=0.10"
Flask-Mail = ">=0.9.1"
Flask-Migrate = ">=2.0"
Flask-Script = "^2.0"
Flask-Testing = ">=0.7"
Flask-Login = ">=0.4"

# flask-sqlachemy 2.2 breaks our apps.
flask-sqlalchemy = "<=2.1"

# Currently broken w/ 0.13
Flask-WTF = ">=0.12,<0.13"

# Forms add-ons
WTForms-Alchemy = ">=0.12"
WTForms-Components = ">=0.10"
wtforms-sqlalchemy = "*"

# pathlib is included in python 3.4, and very useful
pathlib = "*"

# can parse isoformat / used in a jinja filter
python-dateutil = "^2.4.0"

# Databases / persistence
SQLAlchemy = "^1.1"
alembic = ">=0.9"

# requirement of jinja2; > 0.21 has an important fix for string format. See
# https://github.com/mitsuhiko/markupsafe/issues/28
MarkupSafe = ">=0.21"

# Indexing
Whoosh = "^2.5"

# Task queue
celery = "~4"
# There is currently a bug w/ redis 3
redis = "~2.10.1"

# Security
bleach = ">=2"
bcrypt = "*"

# low-level tools
python-deprecated = "*"
typing = { version = "*", python = "~2.7" }
hyperlink = "*"

# Used by DeferredJS (TODO: remove)
lxml = "*"

# Used by the logging config loader (TODO: remove)
PyYAML = "*"

# Used by the connection audit
pygeoip = "*"

# Progres bar, used by some scripts
tqdm = "*"

# Used by the Sentry extension
sentry-sdk = { version="*", extras=["flask"] }

# for debug toolbar
sqlparse = "*"

# antivirus interface
clamd = "*"

# Content detection / transformation
python-magic = "*"
pillow = "*"

# Reporting
pandas = ">=0.17"

#
# Assets management (might not be necessary if distributing compiled assets)
#
jsmin = "*"
cssmin = "*"
closure = "*"

[tool.poetry.dev-dependencies]
# For running tests (pytest and friends)
pytest = ">=2.4.0"
pytest-xdist = "*"
pytest-randomly = "*"
pytest-repeat = "*"
pytest-cov = "*"

# Backport of Python 3 mocking library
mock = ">=1.0.1"

# Static code analysis: flake* and friends
flake8 = "*"
flake8-comprehensions = "*"
flake8-mutable = "*"
flake8-pytest = "*"
flake8-super-call = "*"
flake8-tidy-imports = "*"
flake8-mypy = { version = "*", python = "^3.6" }
flake8-bugbear = { version = "*", python = "^3.6" }
mastool = "*"
mccabe = "*"

# Later
# flake8-pep3101
# this one tries too hard
# pep8-naming

# Development tools
pre-commit = "*"

# Formatting (update version explicitely when needed)
isort = "4.3.4"
docformatter = "1.0"
# black = { version = "*", python = "^3.6" }

# To build docs
# (Doesn't work w/ sphinx 1.4.5)
Sphinx = ">=1.5.5"

# Standard theme for readthedocs.com
sphinx-rtd-theme = "*"

# Used by functional tests
requests = "*"

# Used by some tests
html5lib = "*"

# Check README
restructuredtext_lint = "*"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
