[metadata]
description-file = README.md

[pytest]
pep8ignore = E121 E111 E201 E202 E231 E261
pep8maxlinelength = 99
python_files = test*.py

[nosetests]
match=^test
nocapture=1
cover-package=abilian
with-coverage=1
cover-erase=1
cover-inclusive=1

[build_sphinx]
source-dir = docs
build-dir  = docs/_build
all_files  = 1
build      = latex

[upload_sphinx]
upload-dir = docs/_build/html

[flake8]
ignore = E111,E121,E201,E202,E225,E501

[pep8]
ignore = E111,E121,E201,E202,E225,E501

