# PBR
[metadata]
name=abilian-core
version=0.2.1.dev0
url=http://docs.abilian.com/
license=LGPL
author=Abilian SAS
author_email=contact@abilian.com
description=A framework for social business (aka Enterprise 2.0) applications, based on Flask and SQLAlchemy

platforms=any
classifier =
    'Development Status :: 3 - Alpha'
    'Environment :: Web Environment'
    'Intended Audience :: Developers'
    'License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)'
    'Operating System :: OS Independent'
    'Programming Language :: Python'
    'Framework :: Flask'

[files]
packages=abilian
include_package_data=True
zip_safe=False

#  cmdclass={'test': PyTest},


# babel
[extract_messages]
mapping_file = etc/babel.cfg
keywords = _n:1,2 _l
output-file = messages.pot
input-dirs = abilian

[update_catalog]
input-file = messages.pot
output-dir = abilian/translations

[compile_catalog]
directory = abilian/translations

[init_catalog]
input-file = messages.pot
output-dir = abilian/translations

# Testing and QA
[pytest]
pep8ignore = E121 E111 E201 E202 E231 E261
pep8maxlinelength = 99
python_files = test*.py

[nosetests]
match=^test
nocapture=1
cover-package=abilian
with-coverage=1
cover-erase=1
cover-inclusive=1

[build_sphinx]
source-dir = docs
build-dir  = docs/_build
all_files  = 1
build      = latex

[upload_sphinx]
upload-dir = docs/_build/html

[flake8]
ignore = E111,E114,E121,E201,E202,E225,E501

[pep8]
ignore = E111,E114,E121,E201,E202,E225,E501

[pylama]
format = pylint
skip = */.tox/*
linters = pep8,mccabe
ignore = E111,E114,E121,E201,E202,E225,E501,W0311,C0111

